<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--  This layout has 10 elements and each element is located horizontally and vertically.
      By its complex structure, constraint layout is used-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/shoe_detail_container_padding"
        tools:context=".ShoeDetailFragment">


        <TextView
            android:id="@+id/text_shoe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/edit_shoe_name"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_shoe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_shoe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/text_shoe_name" />


        <TextView
            android:id="@+id/text_shoe_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_shoe_company"
            app:layout_constraintEnd_toStartOf="@+id/edit_shoe_company"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@+id/text_shoe_name" />

        <EditText
            android:id="@+id/edit_shoe_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/text_shoe_company"
            app:layout_constraintTop_toBottomOf="@+id/edit_shoe_name" />


        <TextView
            android:id="@+id/text_shoe_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_shoe_size"
            app:layout_constraintEnd_toStartOf="@+id/edit_shoe_size"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@+id/text_shoe_company" />

        <EditText
            android:id="@+id/edit_shoe_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/text_shoe_size"
            app:layout_constraintTop_toBottomOf="@+id/edit_shoe_company" />


        <TextView
            android:id="@+id/text_shoe_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_shoe_description"
            app:layout_constraintEnd_toStartOf="@+id/edit_shoe_description"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@+id/text_shoe_size" />

        <EditText
            android:id="@+id/edit_shoe_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/text_shoe_description"
            app:layout_constraintTop_toBottomOf="@+id/edit_shoe_size" />


        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/save"
            app:layout_constraintEnd_toStartOf="@+id/button_cancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_shoe_description" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_save" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>