<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="shoe"
            type="kr.co.jinsu.shoestore.models.Shoe" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="1px"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shoe_name"
                android:textColor="@color/light_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textColor="@color/light_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shoe_size"
                android:textColor="@color/light_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/light_black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:background="@color/white"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_item_shoe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/shoe_name"
                android:text="@{shoe.name}"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_item_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/company"
                android:text="@{shoe.company}"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_item_shoe_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/shoe_size"
                android:text="@{shoe.size}"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/description"
                android:text="@{shoe.description}"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</layout>